--- a/src/app/components/pages/search-resule-page/search-resule-page.component.html
+++ b/src/app/components/pages/search-resule-page/search-resule-page.component.html
@@ -22,7 +22,7 @@
                 <div class="popular-search"  >
                     <span class="title">Popular Search: </span>
                     <!-- <label for=""></label> -->
-                    <a  *ngFor="let latestTrendTerm of latestTrend">
+                    <a  *ngFor="let latestTrendTerm of latestTrend" style="cursor: pointer;">
                         <a (click)="fillSearchBox(latestTrendTerm)" >
                         {{ latestTrendTerm }}
                         </a>
