--- a/src/app/components/pages/candidates-list-jobs/job-details-page.component.html
+++ b/src/app/components/pages/candidates-list-jobs/job-details-page.component.html
@@ -1,35 +1,60 @@
 <!-- Page Title -->
 <div class="inner-banner">
     <div class="container">
-        <div class="job-card" style="width: 670px; height: fit-content;">
-
+        <div class="job-card" style="width: 670px; height: fit-content">
             <div class="job-image mx-3">
-                <img src="assets/images/job/job1.jpg" alt="job-image" style="width: 100px;">
+                <img
+                    src="assets/images/job/job1.jpg"
+                    alt="job-image"
+                    style="width: 100px"
+                />
             </div>
-            
+
             <h3>{{ jobToArray[0][1].job_title }}</h3>
 
-            <ul class="list-group list-group-flush" style="font-size: large;">
-                <li  class="list-group-item" style="cursor: default;" onMouseOver="this.style.color='#00CA99'" onMouseOut="this.style.color='Black'"><i class="ri-briefcase-line"></i> {{jobToArray[0][1].career_level}}</li>
-                <li class="list-group-item" style="cursor: default;" onMouseOver="this.style.color='#00CA99'" onMouseOut="this.style.color='Black'"><i class="ri-profile-line"></i> {{jobToArray[0][1].job_type}} </li>
-                <li class="list-group-item" style="cursor: default;" onMouseOver="this.style.color='#00CA99'" onMouseOut="this.style.color='Black'"><i class="ri-award-line"></i> {{jobToArray[0][1].experience}} Years</li>
+            <ul class="list-group list-group-flush" style="font-size: large">
+                <li
+                    class="list-group-item"
+                    style="cursor: default"
+                    onMouseOver="this.style.color='#00CA99'"
+                    onMouseOut="this.style.color='Black'"
+                >
+                    <i class="ri-briefcase-line"></i>
+                    {{ jobToArray[0][1].career_level }}
+                </li>
+                <li
+                    class="list-group-item"
+                    style="cursor: default"
+                    onMouseOver="this.style.color='#00CA99'"
+                    onMouseOut="this.style.color='Black'"
+                >
+                    <i class="ri-profile-line"></i>
+                    {{ jobToArray[0][1].job_type }}
+                </li>
+                <li
+                    class="list-group-item"
+                    style="cursor: default"
+                    onMouseOver="this.style.color='#00CA99'"
+                    onMouseOut="this.style.color='Black'"
+                >
+                    <i class="ri-award-line"></i>
+                    {{ jobToArray[0][1].experience }} Years
+                </li>
 
                 <!-- <li class="list-group-item">{{ jobToArray[0][1].job_title }}</li> -->
                 <!-- <li class="list-group-item">{{ jobToArray[0][1].job_title }}</li> -->
             </ul>
             <!-- <br> -->
-            
-            
-            <div class="d-md-flex align-items-center justify-content-between">
-                <div class="last-date" style="font-size: larger;">Last Date: {{ jobToArray[0][1].deadline }}</div>
-                <a (click)="applyNow(jobToArray[0][1].id)" class="default-btn" *ngIf="showApplyNow;">Apply Now</a>
-                <a  (click)="fromLogin()" class="default-btn" *ngIf="showApplyNow2;">Login to apply</a>
-            </div>
-            
-            <!-- <button class="bookmark-btn"><i class="ri-bookmark-line"></i></button> -->
-            
-        </div>
 
+            <div class="d-md-flex align-items-center justify-content-between">
+                <div class="last-date" style="font-size: larger">
+                    Last Date: {{ jobToArray[0][1].deadline }}
+                </div>
+                
+            </div>
+
+            <!-- <button class="bookmark-btn"><i class="ri-bookmark-line"></i></button> -->
+        </div>
     </div>
 </div>
 
@@ -38,27 +63,70 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-12 col-md-12">
+                <ul class="nav nav-tabs mb-3" id="ex1" role="tablist">
+                    <li class="nav-item" role="presentation">
+                        <a
+                            class="nav-link"
+                            data-mdb-toggle="tab"
+                            role="tab"
+                            (click)="dataSheet('all')"
+                            id="all"
+                            style="cursor: pointer;"
+                            >All Applicants</a
+                        >
+                    </li>
+                    <li class="nav-item" role="presentation">
+                        <a class="nav-link" data-mdb-toggle="tab" id="shortlisted" role="tab" (click)="dataSheet('shortlisted')"  style="cursor: pointer;"
+                            >Shortlisted Applicants</a
+                        >
+                    </li>
+
+                    <li class="nav-item" role="presentation">
+                        <a class="nav-link" data-mdb-toggle="tab" id="rejected" role="tab" (click)="dataSheet('rejected')" style="cursor: pointer;"
+                            >Rejected Applicants</a
+                        >
+                    </li>
+                </ul>
+            </div>
+            <div
+                class="col-lg-12 col-md-12 tab-pane fade show active"
+                id="ex1-tabs-1"
+                role="tabpanel"
+                aria-labelledby="ex1-tab-1"
+            >
                 <div class="job-details-desc">
-                    <h4>Applicants List : </h4>
+                    <!-- <h4>Applicants List :</h4> -->
                     <div class="tab-content" id="myTabContent">
-                        <div class="tab-pane fade active show" id="home" role="tabpanel">
+                        <div
+                            class="tab-pane fade active show"
+                            id="home"
+                            role="tabpanel"
+                        >
                             <div class="table-responsive">
-                                <table class="table">
+                                <table class="table" id="dataLoader">
                                     <thead>
                                         <tr>
-                                            <th class="text-left" scope="col">Name</th>
+                                            <th class="text-left" scope="col">
+                                                Name
+                                            </th>
                                             <th scope="col">Current Role</th>
                                             <th scope="col">Headline</th>
-                                            <th scope="col">About</th>
-                                            <th class="text-center" scope="col">Mobile</th>
-                                            <th class="text-center" scope="col">Action</th>
+                                            <th scope="col">Email-Id</th>
+                                            <th class="text-center" scope="col">
+                                                Mobile
+                                            </th>
+                                            <th class="text-center" scope="col">
+                                                Action
+                                            </th>
                                         </tr>
                                     </thead>
                                     <tbody>
-                                        <tr class="inner-box">
+                                        <tr class="inner-box" *ngFor="let applicantsList of applicantsList"> 
                                             <td>
                                                 <div class="event-wrap">
-                                                    <h5><a>Harman Kardon</a></h5>
+                                                    <h5>
+                                                        <a>{{applicantsList.name}}</a>
+                                                    </h5>
                                                     <!-- <div class="meta">
                                                         <div class="organizers">
                                                             <a href="#">Aslan Lingker</a>
@@ -74,38 +142,41 @@
                                             </td>
                                             <td>
                                                 <div class="r-no">
-                                                    <span>Room B3</span>
+                                                    <span>{{applicantsList.current_role}}</span>
                                                 </div>
                                             </td>
                                             <td>
                                                 <div class="r-no">
-                                                    <span>Room B3</span>
+                                                    <span>{{applicantsList.headline}}</span>
                                                 </div>
                                             </td>
                                             <td>
                                                 <div class="r-no">
-                                                    <span>Room B3</span>
+                                                    <span>{{applicantsList.email_id}}</span>
                                                 </div>
                                             </td>
                                             <td>
                                                 <div class="r-no">
-                                                    <span>Room B3</span>
+                                                    <span>{{applicantsList.mobile_number}}</span>
                                                 </div>
                                             </td>
                                             <td class="text-center">
                                                 <div class="primary-btn">
-                                                    <a class="btn btn-success m-1">Shortlist</a>
+                                                    <a
+                                                        class="btn btn-success m-1"
+                                                        >Shortlist</a
+                                                    >
                                                     <!-- <a class="btn btn-outline-danger m-1" href="#">Not Intrested</a> -->
                                                 </div>
                                             </td>
                                         </tr>
-                                  
                                     </tbody>
                                 </table>
                             </div>
-                        </div>                </div>
+                        </div>
+                    </div>
+                </div>
             </div>
-            
         </div>
     </div>
 </div>
