--- a/src/app/components/pages/candidates-list-jobs/job-details-page.component.html
+++ b/src/app/components/pages/candidates-list-jobs/job-details-page.component.html
@@ -72,7 +72,7 @@
                             (click)="dataSheet('all')"
                             id="all"
                             style="cursor: pointer;"
-                            >All Applicants</a
+                            >New Applicants</a
                         >
                     </li>
                     <li class="nav-item" role="presentation">
@@ -162,11 +162,8 @@
                                             </td>
                                             <td class="text-center">
                                                 <div class="primary-btn">
-                                                    <a
-                                                        class="btn btn-success m-1"
-                                                        >Shortlist</a
-                                                    >
-                                                    <!-- <a class="btn btn-outline-danger m-1" href="#">Not Intrested</a> -->
+                                                    <a class="btn btn-success m-1" (click)="shortlist(applicantsList.id,applicantsList.job_id)" *ngIf="showShortlistButton;"> &check; Shortlist</a>
+                                                    <a class="btn btn-outline-danger m-1" (click)="reject(applicantsList.id,applicantsList.job_id)" *ngIf="showRejectButton;">&cross; Not Intrested</a>
                                                 </div>
                                             </td>
                                         </tr>
@@ -176,6 +173,32 @@
                         </div>
                     </div>
                 </div>
+            </div>
+            <div class="col-lg-12 col-md-12">
+                <ul class="nav nav-tabs mb-3" id="ex1" role="tablist">
+                    <li class="nav-item" role="presentation">
+                        <a
+                            class="nav-link"
+                            data-mdb-toggle="tab"
+                            role="tab"
+                            (click)="dataSheet('all')"
+                            id="all_bottom"
+                            style="cursor: pointer;"
+                            >New Applicants</a
+                        >
+                    </li>
+                    <li class="nav-item" role="presentation">
+                        <a class="nav-link" data-mdb-toggle="tab" id="shortlisted_bottom" role="tab" (click)="dataSheet('shortlisted')"  style="cursor: pointer;"
+                            >Shortlisted Applicants</a
+                        >
+                    </li>
+
+                    <li class="nav-item" role="presentation">
+                        <a class="nav-link" data-mdb-toggle="tab" id="rejected_bottom" role="tab" (click)="dataSheet('rejected')" style="cursor: pointer;"
+                            >Rejected Applicants</a
+                        >
+                    </li>
+                </ul>
             </div>
         </div>
     </div>
