--- a/src/app/components/pages/company-jobs-posted/company-jobs-posted-page.component.html
+++ b/src/app/components/pages/company-jobs-posted/company-jobs-posted-page.component.html
@@ -16,9 +16,9 @@
             <div class="col-lg-8 col-md-12">
                 <div class="jend-grid-sorting row align-items-center">
                     <div class="col-lg-6 col-md-6 col-sm-5 result-count">
-                        <p>Showing 1 – 10 of {{arraySize}} results</p>
+                        <p>Showing {{arraySize}} results</p>
                     </div>
-                    <div class="col-lg-6 col-md-6 col-sm-7 ordering">
+                    <!-- <div class="col-lg-6 col-md-6 col-sm-7 ordering">
                         <div class="select-box">
                             <label>Sort By:</label>
                             <select>
@@ -29,7 +29,7 @@
                                 <option>Price: high to low</option>
                             </select>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
@@ -97,231 +97,7 @@
                         </div>
                         
                     </div>
-                    
-                    <div class="col-lg-4 col-sm-6 col-md-6 px-0 mx-0" >
-                    <div class="job-listings-sidebar" style="font-size: larger;">  
-                        <div class="widget-item">
-                            <h3>Type of Category</h3>
-                            <div class="widget-body">
-                                <ul class="custom-checkbox">
-                                    <li>
-                                        <div class="form-check">
-                                            <input class="form-check-input" type="checkbox" id="python">
-                                            <label class="form-check-label" for="python">
-                                                Python
-                                                <span>(750)</span>
-                                            </label>
-                                        </div>
-                                    </li>
-                                    <li>
-                                        <div class="form-check">
-                                            <input class="form-check-input" type="checkbox" id="wordpress">
-                                            <label class="form-check-label" for="wordpress">
-                                                WordPress
-                                                <span>(111)</span>
-                                            </label>
-                                        </div>
-                                    </li>
-                                    <li>
-                                        <div class="form-check">
-                                            <input class="form-check-input" type="checkbox" id="javascript">
-                                            <label class="form-check-label" for="javascript">
-                                                JavaScript
-                                                <span>(123)</span>
-                                            </label>
-                                        </div>
-                                    </li>
-                                    <li>
-                                        <div class="form-check">
-                                            <input class="form-check-input" type="checkbox" id="php">
-                                            <label class="form-check-label" for="php">
-                                                PHP
-                                                <span>(60)</span>
-                                            </label>
-                                        </div>
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
-                        <div class="widget-item">
-                            <h3>Type of Employment</h3>
-                            <div class="widget-body">
-                                <ul class="custom-checkbox">
-                                    <li>
-                                        <div class="form-check">
-                                            <input class="form-check-input" type="checkbox" id="all-levels">
-                                            <label class="form-check-label" for="all-levels">
-                                                Full Time Jobs
-                                                <span>(185)</span>
-                                            </label>
-                                        </div>
-                                    </li>
-                                    <li>
-                                        <div class="form-check">
-                                            <input class="form-check-input" type="checkbox" id="beginner">
-                                            <label class="form-check-label" for="beginner">
-                                                Part Time Jobs
-                                                <span>(60)</span>
-                                            </label>
-                                        </div>
-                                    </li>
-                                    <li>
-                                        <div class="form-check">
-                                            <input class="form-check-input" type="checkbox" id="intermediate">
-                                            <label class="form-check-label" for="intermediate">
-                                                Remote Jobs
-                                                <span>(95)</span>
-                                            </label>
-                                        </div>
-                                    </li>
-                                    <li>
-                                        <div class="form-check">
-                                            <input class="form-check-input" type="checkbox" id="expert">
-                                            <label class="form-check-label" for="expert">
-                                                Internship
-                                                <span>(111)</span>
-                                            </label>
-                                        </div>
-                                    </li>
-                                    <li>
-                                        <div class="form-check">
-                                            <input class="form-check-input" type="checkbox" id="contract">
-                                            <label class="form-check-label" for="contract">
-                                                Contract
-                                                <span>(111)</span>
-                                            </label>
-                                        </div>
-                                    </li>
-                                    <li>
-                                        <div class="form-check">
-                                            <input class="form-check-input" type="checkbox" id="training-jobs">
-                                            <label class="form-check-label" for="training-jobs">
-                                                Training Jobs
-                                                <span>(111)</span>
-                                            </label>
-                                        </div>
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
-                        <div class="widget-item">
-                            <h3>Seniority Level</h3>
-                            <div class="widget-body">
-                                <ul class="custom-checkbox">
-                                    <li>
-                                        <div class="form-check">
-                                            <input class="form-check-input" type="checkbox" id="paid">
-                                            <label class="form-check-label" for="paid">
-                                                Student Level
-                                                <span>(750)</span>
-                                            </label>
-                                        </div>
-                                    </li>
-                                    <li>
-                                        <div class="form-check">
-                                            <input class="form-check-input" type="checkbox" id="free">
-                                            <label class="form-check-label" for="free">
-                                                Entry Level
-                                                <span>(111)</span>
-                                            </label>
-                                        </div>
-                                    </li>
-                                    <li>
-                                        <div class="form-check">
-                                            <input class="form-check-input" type="checkbox" id="mid-level">
-                                            <label class="form-check-label" for="mid-level">
-                                                Mid Level
-                                                <span>(65)</span>
-                                            </label>
-                                        </div>
-                                    </li>
-                                    <li>
-                                        <div class="form-check">
-                                            <input class="form-check-input" type="checkbox" id="senior-level">
-                                            <label class="form-check-label" for="senior-level">
-                                                Senior level
-                                                <span>(43)</span>
-                                            </label>
-                                        </div>
-                                    </li>
-                                    <li>
-                                        <div class="form-check">
-                                            <input class="form-check-input" type="checkbox" id="director">
-                                            <label class="form-check-label" for="director">
-                                                Director
-                                                <span>(99)</span>
-                                            </label>
-                                        </div>
-                                    </li>
-                                    <li>
-                                        <div class="form-check">
-                                            <input class="form-check-input" type="checkbox" id="vp">
-                                            <label class="form-check-label" for="vp">
-                                                VP
-                                                <span>(132)</span>
-                                            </label>
-                                        </div>
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
-                        <div class="widget-item">
-                            <h3>Salary Range</h3>
-                            <div class="widget-body">
-                                <ul class="custom-checkbox">
-                                    <li>
-                                        <div class="form-check">
-                                            <input class="form-check-input" type="checkbox" id="zero-to-one">
-                                            <label class="form-check-label" for="zero-to-one">
-                                                $1200 - $1400
-                                                <span>(143)</span>
-                                            </label>
-                                        </div>
-                                    </li>
-                                    <li>
-                                        <div class="form-check">
-                                            <input class="form-check-input" type="checkbox" id="one-to-three">
-                                            <label class="form-check-label" for="one-to-three">
-                                                $400 - $600
-                                                <span>(22)</span>
-                                            </label>
-                                        </div>
-                                    </li>
-                                    <li>
-                                        <div class="form-check">
-                                            <input class="form-check-input" type="checkbox" id="three-to-six">
-                                            <label class="form-check-label" for="three-to-six">
-                                                $1000 - $1200
-                                                <span>(32)</span>
-                                            </label>
-                                        </div>
-                                    </li>
-                                    <li>
-                                        <div class="form-check">
-                                            <input class="form-check-input" type="checkbox" id="six-to-ten">
-                                            <label class="form-check-label" for="six-to-ten">
-                                                $800 - $1000
-                                                <span>(102)</span>
-                                            </label>
-                                        </div>
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
-                        <div class="widget-item">
-                            <h3>Based On Gender</h3>
-                            <div class="widget-body">
-                                <select class="form-select">
-                                    <option selected>Select Gender</option>
-                                    <option value="1">Male</option>
-                                    <option value="2">Female</option>
-                                    <option value="3">Other</option>
-                                </select>
-                            </div>
-                        </div>
-                    </div>
-                    
-                    </div>    
+                   
                 </div>
     </div>
 </div>
